--- a/index.html
+++ b/index.html
@@ -42,6 +42,21 @@
       white-space: nowrap;
     }
     nav a:hover { text-decoration: underline; }
+    .sticky-cta {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      z-index: 999;
+      background: #00ffc8;
+      color: #000;
+      padding: 0.75rem 1.5rem;
+      border-radius: 8px;
+      font-weight: bold;
+      text-decoration: none;
+      box-shadow: 0 0 10px rgba(0, 255, 200, 0.6);
+      transition: transform 0.2s ease;
+    }
+    .sticky-cta:hover { transform: scale(1.05); }
     .hero {
       min-height: 100vh;
       display: flex;
@@ -78,6 +93,7 @@
       max-width: 1000px;
       margin: auto;
     }
+    .section:nth-of-type(even) { background: #34495e; }
     .section h2 {
       font-family: 'Poppins', sans-serif;
       font-size: 2rem;
@@ -176,6 +192,8 @@
       <a href="#about">About</a>
     </nav>
   </header>
+
+  <a class="sticky-cta" href="https://buy.stripe.com/9AQ7uvfne7FZb1SaEE" target="_blank">Subscribe</a>
 
   <section class="hero">
     <div class="hero-img-wrapper">
