--- a/index.html
+++ b/index.html
@@ -224,7 +224,35 @@
     }
   </style>
 </head>
-<body id="top">
-<!-- Body content stays the same -->
+      </div>
+      <div class="team-member">
+        <img src="Brandon_Adolfo.jpg" alt="Brandon Adolfo">
+        <h3>Brandon Adolfo</h3>
+        <p><strong>Developer</strong></p>
+        <p>Cross-platform mobile builder with an eye for design.</p>
+        <a href="https://brandon-adolfo.vercel.app/" target="_blank">brandon-adolfo.vercel.app</a>
+      </div>
+    </div>
+  </section>
+
+  <section class="section" id="about">
+    <h2>About 3dvr.tech</h2>
+    <p style="max-width: 700px; margin: auto; text-align: center;">
+      We believe everyone deserves the tools to build their digital life. We're creating an ecosystem of open-source hardware, software, and support—starting with $20/month personal services. Our mission is to empower creators, entrepreneurs, and digital nomads everywhere.
+    </p>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 <a href="https://3dvr.tech" style="color: #00ffc8;">3dvr.tech</a> — Open Source. Open Future.</p>
+  </footer>
+
+  <script>
+    document.querySelectorAll('.team-member').forEach(member => {
+      member.addEventListener('click', () => {
+        const link = member.querySelector('a');
+        if (link) window.open(link.href, '_blank');
+      });
+    });
+  </script>
 </body>
 </html>
