--- a/index.html
+++ b/index.html
@@ -224,6 +224,86 @@
     }
   </style>
 </head>
+      <body id="top">
+  <header>
+    <a href="#top"><img src="3DVR.png" alt="3dvr.tech logo"></a>
+    <nav>
+      <a href="#top">Home</a>
+      <a href="#subscribe">Subscribe</a>
+      <a href="#features">Features</a>
+      <a href="#testimonials">Testimonials</a>
+      <a href="#team">Team</a>
+      <a href="#about">About</a>
+    </nav>
+  </header>
+
+  <a class="sticky-cta" href="https://buy.stripe.com/9AQ7uvfne7FZb1SaEE" target="_blank">Subscribe</a>
+
+  <section class="hero">
+    <div class="hero-img-wrapper">
+      <img src="3DVR.png" alt="3dvr.tech logo" />
+    </div>
+    <h1>Build The Future</h1>
+    <p>Open-source tech for digital nomads, creators, and explorers</p>
+  </section>
+
+  <section class="cta" id="subscribe">
+    <h2>Websites & Apps for $20/month</h2>
+    <p>Subscribe to get a personal site, app, or support package tailored to your vision. Simple, clean, and open-source powered by 3dvr.tech.</p>
+    <a href="https://buy.stripe.com/9AQ7uvfne7FZb1SaEE" target="_blank">Subscribe Now</a>
+  </section>
+
+  <section class="section alt" id="features">
+    <h2>What You Get</h2>
+    <ul>
+      <li>Custom Websites & Landing Pages</li>
+      <li>Mobile-Friendly App Designs</li>
+      <li>Unlimited Tech Support Questions</li>
+      <li>Personal Consultations</li>
+      <li>Access to Our Builder Community</li>
+    </ul>
+  </section>
+
+  <section class="section" id="testimonials">
+    <h2>What Our Clients Say</h2>
+    <div>
+      <p><strong><a href="https://www.brendadyestephens.com/" target="_blank">SC Librarian</a>:</strong> “3dvr.tech helped me create a modern and accessible site for my library project. Tech support has been amazing.”</p>
+      <p><strong><a href="https://cruisersgarage.com/" target="_blank">Cruisers Garage</a>:</strong> “They built a slick, mobile-friendly landing page for our custom motorcycles in no time. Highly recommend.”</p>
+      <p><strong><a href="https://www.gif.edu.gt/" target="_blank">GIF English</a>:</strong> “We needed a site that could handle English lessons, scheduling, and videos. 3dvr.tech delivered exactly what we imagined.”</p>
+      <p><strong><a href="https://www.sdvanlife.com/" target="_blank">SD Vanlife</a>:</strong> “Thomas and 3dvr.tech gave us the tools and guidance we needed to launch our van conversion business online.”</p>
+    </div>
+  </section>
+
+  <section class="section" id="team">
+    <h2>Meet the Team</h2>
+    <div class="team-grid">
+      <div class="team-member">
+        <img src="Thomas_Stephens.jpg" alt="Thomas Stephens">
+        <h3>Thomas Stephens</h3>
+        <p><strong>CEO / CTO / Founder</strong></p>
+        <p>Visionary technologist creating the tools of tomorrow.</p>
+        <a href="https://tmsteph.com" target="_blank">tmsteph.com</a>
+      </div>
+      <div class="team-member">
+        <img src="Bodhi_Lowski.jpg" alt="Bodhi Lowski">
+        <h3>Bodhi Lowski</h3>
+        <p><strong>Chief Marketing Officer</strong></p>
+        <p>Building the brand through grassroots storytelling and growth.</p>
+        <a href="https://bodhi-lowski.vercel.app/" target="_blank">bodhi-lowski.vercel.app</a>
+      </div>
+      <div class="team-member">
+        <img src="David_Martinez.jpg" alt="David Martinez">
+        <h3>David Martinez</h3>
+        <p><strong>Lead Developer</strong></p>
+        <p>Crafting immersive 3D and web experiences with finesse.</p>
+        <a href="https://david-martinez.vercel.app/" target="_blank">david-martinez.vercel.app</a>
+      </div>
+      <div class="team-member">
+        <img src="Esai_Gamboa.jpg" alt="Esai Gamboa">
+        <h3>Esai Gamboa</h3>
+        <p><strong>Developer</strong></p>
+        <p>Frontend expert focused on clean, responsive interfaces.</p>
+        <a href="https://esai-gamboa.vercel.app/" target="_blank">esai-gamboa.vercel.app</a>
       </div>
       <div class="team-member">
         <img src="Brandon_Adolfo.jpg" alt="Brandon Adolfo">
